Fix Menu z-index bug

--- a/src/assets/styles/cmps/groupPreview.scss
+++ b/src/assets/styles/cmps/groupPreview.scss
@@ -56,7 +56,7 @@
 	_::-webkit-full-page-media,
 	_:future,
 	:root & {
-		transform: translateX(40px);
+		left: 40px;
 	}
 }
 
